--- a/www/index.html
+++ b/www/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./src/style.css" />
-    <title>Vite App</title>
+    <title>How to Fly</title>
   </head>
   <body>
     <canvas id="viewport" width="800" height="800"></canvas>
