statistics added to genetic algorithm, frontend updated with a button to fast-forward of evolving

--- a/www/index.html
+++ b/www/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <canvas id="viewport" width="800" height="800"></canvas>
+    <button id="train">train please, thank u</button>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
